[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
clap = { version = "4.3.6", features = ["derive"] }
anyhow = "1.0.71"
log = "0.4.19"
env_logger = "0.10.0"
rand = "0.8.5"
sled = "0.34.7"
crossbeam = "0.8.2"
num_cpus = "1.16.0"
rayon = "1.7.0"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.5.1"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

#[[bench]]
#name = "engines"
#harness = false

[[bench]]
name = "pools"
harness = false
